wip: adapt to isolated repo